# bev-vawa-lite

./: .gitignore  CLAUDE.md  README.md  pyproject.toml  repro.sh
bev_vawa/: __init__.py
bev_vawa/control/: __init__.py  pure_pursuit.py
bev_vawa/data/: __init__.py  dataset.py  expert.py  gibson_episodes.py  rollout.py  rollout_habitat.py
bev_vawa/envs/: __init__.py  habitat_env.py  mujoco_env.py  occupancy.py  pib_generator.py
bev_vawa/eval/: __init__.py  closed_loop.py  metrics.py  policies.py
bev_vawa/models/: __init__.py  baselines.py  bev_encoder.py  full_model.py  fusion.py  geometry_lift.py  va_head.py  wa_head.py
bev_vawa/train/: __init__.py  _common.py  baseline_trainer.py  losses.py  stage_a_va.py  stage_b_wa.py  stage_c_joint.py
bev_vawa/utils/: __init__.py  config.py  device.py  logging.py  seed.py
configs/: default.yaml
configs/ablations/: bev_no_free.yaml  bev_no_free_hard.yaml  h1.yaml  (+11 more)
docker/: README.md  habitat.Dockerfile  train_remote.sh
docs/: gibson_remote_run.md
paper/: full_report.tex  paper.md  stage_report.html  stage_report.tex
results/: ablation_table.csv  bev_A_B.csv  bev_ablation.csv  bev_probing.csv  bev_probing_hard.csv  fast_slow_latency.csv  gibson_dagger_eval.csv  gibson_safety_sweep.csv  gibson_uplift_eval.csv  main_table.csv  main_table_habitat.csv
scripts/: dagger_aggregate_habitat.py  eval.py  eval_habitat.py  generate_data.py  generate_data_habitat.py  linear_probe.py  linear_probe_hard.py  make_figures.py  run_bev_A_B_pod.sh  run_bev_A_B_resume.sh  run_bev_ablation.sh  run_dagger_iteration.sh  run_safety_sweep.sh  train.py  viz_bev_channels.py  viz_demo.py
tests/: test_stage0_env.py  test_stage10_bev_encoder.py  test_stage11_wa_head.py  test_stage12_gibson.py  test_stage1_env.py  test_stage2_data.py  test_stage3_va.py  test_stage4_wa.py  test_stage5_loop.py  test_stage6_baselines.py  test_stage7_artifacts.py  test_stage8_repro.py  test_stage9_habitat.py
(+9 files in other folders)
